--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,15 @@ body{
     margin: 0;
     font-family:Arial, Helvetica, sans-serif;
     font-size: large;
+    text-align: center;
 }
 .main{
     background-color:#ff0000;
 	padding: 15px;
-    text-align: center;
 }
 .header{
     background-color:#000dff;
-	padding: 80px;
-    text-align: center;
+	padding: 50px 50px;
 }
 .content{
     background-color:#1ce901;
@@ -22,14 +21,13 @@ body{
 .sidebar{
     margin: 0;
     background-color:#036017;
-	padding: 270px 172px;
-    width: 89.5px;
-    float: right;
-    text-align: center;
+	padding: 270px 177px;
+    padding-right: 5px;
+    padding-left: 20px;
 }
 .footer{
     margin: 0;
     background-color:#98af00;
-	text-align: center;
-    padding: 80px;
+    padding-bottom: 75px;
+    padding-top: 50px;
 }
